--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
 
             </div>
             <div class="social-wrapper">
-                <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
-                <a href="#"><i class="fab fa-soundcloud fa-3x"></i></a>
-                <a href="#"><i class="fab fa-youtube fa-3x"></i></a>
-                <a href="#"><i class="fab fa-spotify fa-3x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-3x"></i></a>
+                <a href="https://www.facebook.com/Purayan-102321675366521"><i class="fab fa-facebook fa-3x"></i></a>
+                <a href="https://soundcloud.com/user-991438289"><i class="fab fa-soundcloud fa-3x"></i></a>
+                <a href="https://www.youtube.com/channel/UCzqNpYaUmtZ9iSzEJgOjdfw"><i class="fab fa-youtube fa-3x"></i></a>
+                <a href="https://open.spotify.com/show/6Piv0lnCc7kzdr1BusJKel?si=hov8m_puTvWmyRUyAZhbGg"><i class="fab fa-spotify fa-3x"></i></a>
+                <a href="https://open.spotify.com/show/6Piv0lnCc7kzdr1BusJKel?si=pbfHifRcTMW0yj_kPagVfw"><i class="fab fa-instagram fa-3x"></i></a>
             </div>
             <p class="name">
                 Purayan &copy; 2021
